Lab Diffi-Hellman

--- a/Lab2.html
+++ b/Lab2.html
@@ -86,6 +86,6 @@
         out.value = RSADecrypt(field, document.getElementById("inputD").value, document.getElementById("inputN2").value);
     }
 </script>
-<script src="./renderer.js"></script>
+<script src="./functions.js"></script>
 </body>
 </html>
