--- a/Pages/LabDiffiHellman.html
+++ b/Pages/LabDiffiHellman.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Алгоритм Диффи-Хеллмана</title>
 </head>
 <body>
-$END$
+<h1>Алгоритм Диффи-Хеллмана</h1>
+<div class="">
+    <label id="labelP">P:</label>
+    <input type="text" class="form-control" id="inputP" size="30">
+    <label id="labelQ">Q:</label>
+    <input type="text" class="form-control" id="inputQ" size="30">
+    <label id="labelSize">Ввести порядок чисел P и Q:</label>
+    <input type="text" class="form-control" id="size" size="9" value="10">
+    <button onclick="generate()">Сгенерировать</button>
+</div>
+<br> <br>
+<div class="">
+    <label id="labelG">G:</label>
+    <input type="text" class="form-control" id="inputG" size="30">
+    <br>
+    <label id="labelXa">Секретное число Xa:</label>
+    <input type="text" class="form-control" id="inputXa" size="30">
+    <br>
+    <label id="labelXb">Секретное число Xb:</label>
+    <input type="text" class="form-control" id="inputXb" size="30">
+    <br>
+    <label id="labelKey">Общий ключ:</label>
+    <input type="text" class="form-control" id="inputKey" size="30">
+</div>
+<script>
+    const electron = require('electron');
+    const {ipcRenderer} = electron;
+
+    function generate() {
+        let inputP = document.getElementById("inputP");
+        let inputQ = document.getElementById("inputQ");
+        let inputSize = document.getElementById("size");
+        let inputG = document.getElementById("inputG");
+        let inputXa = document.getElementById("inputXa");
+        let inputXb = document.getElementById("inputXb");
+        let key = document.getElementById("inputKey");
+
+        // let keys = genKeys(inputP.value, inputQ.value);
+        keys = DiffiHellman(inputP.value, inputQ.value, inputSize.value);
+        inputP.value = keys.p;
+        inputQ.value = keys.q;
+        inputG.value = keys.g;
+        inputXa.value = keys.Xa;
+        inputXb.value = keys.Xb;
+        key.value = keys.Zab;
+    }
+
+    function encode() {
+
+        let field = document.getElementById('message').value;
+        let out = document.getElementById('cryptMessage');
+        // let keys = genKeys(document.getElementById("inputP").value, document.getElementById("inputQ").value);
+        // console.log(keys)
+        out.value = RSAEncrypt(field, document.getElementById("inputE").value, document.getElementById("inputN").value);
+    }
+
+    function decode() {
+
+        let field = document.getElementById('cryptMessage').value;
+        let out = document.getElementById('message');
+        // let keys = genKeys(document.getElementById("inputP").value, document.getElementById("inputQ").value);
+        // console.log(keys)
+        out.value = RSADecrypt(field, document.getElementById("inputD").value, document.getElementById("inputN2").value);
+    }
+</script>
+<script src="../functions.js"></script>
 </body>
 </html>
