--- a/Pages/LabDiffiHellmansub.html
+++ b/Pages/LabDiffiHellmansub.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Алгоритм Диффи-Хеллмана окно 1</title>
+    <title>Алгоритм Диффи-Хеллмана окно 2</title>
 </head>
 <body>
-<h1>Алгоритм Диффи-Хеллмана окно 1</h1>
+<h1>Алгоритм Диффи-Хеллмана окно 2</h1>
 <div class="">
     <label id="labelP">P:</label>
     <input type="text" class="form-control" id="inputP" size="30">
@@ -20,8 +20,8 @@
     <label id="labelG">G:</label>
     <input type="text" class="form-control" id="inputG" size="30">
     <br>
-    <label id="labelXa">Секретное число Xa:</label>
-    <input type="text" class="form-control" id="inputXa" size="30">
+    <label id="labelXb">Секретное число Xb:</label>
+    <input type="text" class="form-control" id="inputXb" size="30">
     <br>
     <label id="labelKey">Общий ключ:</label>
     <input type="text" class="form-control" id="inputKey" size="30">
@@ -40,12 +40,12 @@
         let key = document.getElementById("inputKey");
 
         ipcRenderer.send('getKeyDiffiHellman', {p: inputP.value, q: inputQ.value, size: inputSize.value});
-        ipcRenderer.on("Key", function(e, data){
+        ipcRenderer.on("Key2", function(e,data){
             inputP.value = data.p;
             inputQ.value = data.q;
             inputG.value = data.g;
-            inputXa.value = data.Xa;
-            key.value = data.Zab;
+            inputXb.value = data.Xb;
+            key.value = data.Zba;
         });
     }
 </script>
