Added comments and some refactoring

--- a/Pages/LabDiffiHellmansub.html
+++ b/Pages/LabDiffiHellmansub.html
@@ -50,6 +50,6 @@
         key.value = data.Zba;
     });
 </script>
-<script src="../functions.js"></script>
+<script src="../src/functions.js"></script>
 </body>
 </html>
