--- a/Pages/LabRSA.html
+++ b/Pages/LabRSA.html
@@ -86,6 +86,6 @@
         out.value = RSADecrypt(field, document.getElementById("inputD").value, document.getElementById("inputN2").value);
     }
 </script>
-<script src="../functions.js"></script>
+<script src="../src/functions.js"></script>
 </body>
 </html>
