--- a/Pages/labAlGamal.html
+++ b/Pages/labAlGamal.html
@@ -42,7 +42,7 @@
     <button onclick="decode()">Расшифровать</button>
 </div>
 </body>
-<script src="../functions.js"></script>
+<script src="../src/functions.js"></script>
 <script>
     const electron = require('electron');
     const {ipcRenderer} = electron;
