--- a/Pages/labShamir.html
+++ b/Pages/labShamir.html
@@ -38,7 +38,7 @@
 </div>
 <br>
 
-<script src="../functions.js"></script>
+<script src="../src/functions.js"></script>
 <script>
     const electron = require('electron');
     const {ipcRenderer} = electron;
