--- a/Pages/LabDiffiHellman.html
+++ b/Pages/LabDiffiHellman.html
@@ -50,6 +50,6 @@
         key.value = data.Zab;
     });
 </script>
-<script src="../functions.js"></script>
+<script src="../src/functions.js"></script>
 </body>
 </html>
