--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <button class="btn waves-effect waves-light" onclick="MD5Button()">MD5 Hash</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="SHAButton()">SHA Hash</button>
+    <br><br>
+    <button class="btn waves-effect waves-light" onclick="RSADigSigButton()">ЭП на алгоритме RSA</button>
 </div>
 
 
@@ -66,6 +68,9 @@
     }
     function SHAButton() {
         ipcRenderer.send('SHAOpen');
+    }
+    function RSADigSigButton() {
+        ipcRenderer.send('RSADigSigOpen');
     }
 </script>
 
