--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     <br><br>
     <button class="btn waves-effect waves-light" onclick="labShamirButton()">Шифр Шамира</button>
     <br><br>
-    <button class="btn waves-effect waves-light" onclick="labAlGamalButton()">Шифр Эль-Гамаля</button>
+    <button class="btn waves-effect waves-light" onclick="labElGamalButton()">Шифр Эль-Гамаля</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="MD5Button()">MD5 Hash</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="SHAButton()">SHA Hash</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="RSADigSigButton()">ЭП на алгоритме RSA</button>
+    <br><br>
+    <button class="btn waves-effect waves-light" onclick="ElGamalDigSigButton()">ЭП на алгоритме Эль-Гамаля</button>
 </div>
 
 
@@ -60,8 +62,8 @@
     function labShamirButton() {
         ipcRenderer.send('labShamirOpen');
     }
-    function labAlGamalButton() {
-        ipcRenderer.send('labAlGamalOpen');
+    function labElGamalButton() {
+        ipcRenderer.send('labElGamalOpen');
     }
     function MD5Button() {
         ipcRenderer.send('MD5Open');
@@ -71,6 +73,9 @@
     }
     function RSADigSigButton() {
         ipcRenderer.send('RSADigSigOpen');
+    }
+    function ElGamalDigSigButton() {
+        ipcRenderer.send('ElGamalDigSigOpen');
     }
 </script>
 
