--- a/Pages/ElGamal_digital_signature.html
+++ b/Pages/ElGamal_digital_signature.html
@@ -2,27 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>RSA цифровая подпись</title>
+	<title>Цифровая подпись на базе шифра Эль-Гамаля</title>
 	<style>.flash_red { background-color: red; } .flash_green { background-color: limegreen; }</style>
 </head>
 <body>
-<h1>RSA цифровая подпись</h1>
+<h1>Цифровая подпись на базе шифра Эль-Гамаля</h1>
 <div class="">
 	<label id="labelP">P:</label>
-	<input type="text" class="form-control" id="inputP" size="30">
-	<label id="labelQ">Q:</label>
-	<input type="text" class="form-control" id="inputQ" size="30">
+	<input type="text" class="form-control" id="inputP" size="91">
 	<label id="labelSize"></label>
 	<input type="text" class="form-control" id="keysize" size="9" value="Размер ключа" onclick="clearInput('keysize')">
 	<button onclick="generate()">Сгенерировать</button>
 </div>
 <br>
 <div>
+	<label id="labelG">G:</label>
+	<input type="text" class="form-control" id="inputG" size="40">
+	<label id="labelC">C:</label>
+	<input type="text" class="form-control" id="inputC2" size="40">
+	<br>
 	<label id="">Введите сообщение </label>
 	<label id="labelD">D:</label>
 	<input type="text" class="form-control" id="inputD" size="30">
-	<label id="labelN">N:</label>
-	<input type="text" class="form-control" id="inputN" size="30">
 	<br>
 	<textarea cols="110" rows="5" id="message"></textarea>
 	<br>
@@ -31,13 +32,12 @@
 <br>
 <div>
 	<label >Введите данные для проверки ЭП </label>
-
-	<label id="labelE">E:</label>
-	<input type="text" class="form-control" id="inputE" size="30">
-	<label id="labelN">N:</label>
-	<input type="text" class="form-control" id="inputN2" size="30">
 	<br>
-	<textarea cols="110" rows="5" id="cryptMessage"></textarea>
+	<label id="labelR">R:</label>
+	<input type="text" class="form-control" id="inputR" size="100">
+	<br>
+	<label id="labelS">S:</label>
+	<input type="text" class="form-control" id="inputS" size="100">
 	<br>
 	<button onclick="trustifySignature()">Проверить цифровую подпись</button>
 </div>
@@ -51,13 +51,13 @@
 		document.getElementById(id).value = '';
 	}
 
-	let inputP = document.getElementById("inputP");
-	let inputQ = document.getElementById("inputQ");
-	let inputE = document.getElementById("inputE");
-	let inputD = document.getElementById("inputD");
-	let inputN = document.getElementById("inputN");
-	let inputN2 = document.getElementById("inputN2");
-	let keysize = document.getElementById("keysize");
+	const inputP = document.getElementById("inputP");
+	const inputC2 = document.getElementById("inputC2");
+	const inputD = document.getElementById("inputD");
+	const inputG = document.getElementById("inputG");
+	const inputR = document.getElementById("inputR");
+	const inputS = document.getElementById("inputS");
+	const keysize = document.getElementById("keysize");
 
 	let flagFile = {
 		flag:false,
@@ -65,18 +65,14 @@
 	}
 
 	function generate() {
-
-		// let keys = genKeys(inputP.value, inputQ.value);
-		keys = bigNumbersGenerate(keysize.value, inputP.value, inputQ.value);
+		let keys = ElGamalGenerate(keysize.value, inputP.value)
 		inputP.value = keys.p;
-		inputQ.value = keys.q;
-		inputE.value = keys.e;
-		inputD.value = keys.d;
-		inputN.value = keys.n;
-		inputN2.value = keys.n;
+		inputG.value = keys.g;
+		inputC2.value = keys.c2; // Закрытый
+		inputD.value = keys.d2; // Открытый
+		console.table(keys);
 	}
 
-	let signature = document.getElementById('cryptMessage');
 	let message = document.getElementById('message');
 
 	['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
@@ -97,25 +93,47 @@
 	};
 
 	/*Create a signature*/
-	function encode() {
+	async function encode() {
+		let p = BigInt(inputP.value);
+		let c = BigInt(inputC2.value);
+		let g = BigInt(inputG.value);
+		let u;
+		let s;
 		let hash;
-		if(flagFile.flag){
-			fs.readFile(flagFile.path, function (err, data) {
-				if (err) throw err;
-				// console.log(data)
-				hash = BigInt('0x' + crypto.createHash('md5').update(data).digest('hex'))
-				signature.value = fastDegreeModule(hash, inputD.value, inputN.value); // Digest
-			});
-
-		} else{
-			hash = BigInt('0x' + crypto.createHash('md5').update(message.value).digest('hex'));
-			// console.log(hash)
-			signature.value = fastDegreeModule(hash, inputD.value, inputN.value); // Digest
+		let k = 0n;
+		let size = (keysize.value / 8) - 1 || (p.toString().length / 8) - 1;
+		while (NOD(k, p - 1n) !== 1n) {
+			k = BigInt('0x' + crypto.randomBytes(~~(size)).toString('hex'));
 		}
+		let r = fastDegreeModule(g, k, p);
+
+		const findHash = new Promise((resolve) => {
+			if (flagFile.flag) {
+				fs.readFile(message.value, function (err, data) {
+					if (err) throw err;
+					resolve(BigInt('0x' + crypto.createHash('md5').update(data).digest('hex')));
+				});
+			} else {
+				resolve(BigInt('0x' + crypto.createHash('md5').update(message.value).digest('hex')));
+			}
+		});
+
+		hash = await findHash;
+
+		u = (fastDegreeModule((hash - (c * r)), 1, p - 1n) + (p - 1n)) % (p - 1n);
+		s = (getInverseElem(k, p - 1n) * u) % (p - 1n);
+		console.table({hash, u, s, r, k, p});
+		inputR.value = r;
+		inputS.value = s;
 	}
 
 	async function trustifySignature() {
 		let checkedDigest;
+		let p = BigInt(inputP.value);
+		let g = BigInt(inputG.value);
+		let r = BigInt(inputR.value);
+		let d = BigInt(inputD.value);
+		let s = BigInt(inputS.value);
 
 		const findHash = new Promise((resolve) =>{
 			if (flagFile.flag) {
@@ -129,11 +147,10 @@
 		});
 
 		let hash = await findHash;
-		checkedDigest = fastDegreeModule(BigInt(signature.value), inputE.value, inputN2.value);
+		checkedDigest = (fastDegreeModule(d, r, p) * fastDegreeModule(r,s, p)) % p;
 
-		console.log(hash, checkedDigest)
-		if (hash === checkedDigest) {
-			message.classList.add('flash_green')
+		if (fastDegreeModule(g, hash, p) === checkedDigest) {
+			message.classList.add('flash_green');
 			setTimeout(function () {
 				message.classList.remove('flash_green');
 			}, 2000);
