FIPS 186 DSA algorithm done

--- a/Pages/ElGamal_digital_signature.html
+++ b/Pages/ElGamal_digital_signature.html
@@ -21,7 +21,7 @@
 	<label id="labelC">C:</label>
 	<input type="text" class="form-control" id="inputC2" size="40">
 	<br>
-	<label id="">Введите сообщение </label>
+	<label id="">Введите сообщение или перетащите файл</label>
 	<label id="labelD">D:</label>
 	<input type="text" class="form-control" id="inputD" size="30">
 	<br>
