--- a/Pages/RSA_digital_signature.html
+++ b/Pages/RSA_digital_signature.html
@@ -18,7 +18,7 @@
 </div>
 <br>
 <div>
-	<label id="">Введите сообщение </label>
+	<label id="">Введите сообщение или перетащите файл</label>
 	<label id="labelD">D:</label>
 	<input type="text" class="form-control" id="inputD" size="30">
 	<label id="labelN">N:</label>
