--- a/Pages/FIPS_186_digital_signature.html
+++ b/Pages/FIPS_186_digital_signature.html
@@ -8,24 +8,27 @@
 <body>
 <h1>Цифровая подпись на базе шифра Эль-Гамаля</h1>
 <div class="">
-	<label id="labelQ">Q:</label>
-	<input type="text" class="form-control" id="inputQ" size="40">
 	<label id="labelP">P:</label>
-	<input type="text" class="form-control" id="inputP" size="91">
-	<label id="labelSize"></label>
-	<input type="text" class="form-control" id="keysize" size="9" value="Размер ключа" onclick="clearInput('keysize')">
+	<textarea cols="103" rows="3" id="inputP"></textarea>
+	<br>
+	<label id="labelQ">Q:</label>
+	<input type="text" class="form-control" id="inputQ" size="50">
+	<br>
 	<button onclick="generate()">Сгенерировать</button>
 </div>
 <br>
 <div>
 	<label id="labelG">G:</label>
-	<input type="text" class="form-control" id="inputG" size="40">
-	<label id="labelC">C:</label>
-	<input type="text" class="form-control" id="inputC2" size="40">
+	<input type="text" class="form-control" id="inputG" size="70">
 	<br>
-	<label id="">Введите сообщение </label>
-	<label id="labelD">D:</label>
-	<input type="text" class="form-control" id="inputD" size="30">
+	<label id="labelX">X:</label>
+	<input type="text" class="form-control" id="inputX" size="70">
+	<br>
+	<label id="labelY">Y:</label>
+	<input type="text" class="form-control" id="inputY" size="70">
+	<br>
+	<label id="">Введите сообщение или перетащите файл</label>
+
 	<br>
 	<textarea cols="110" rows="5" id="message"></textarea>
 	<br>
@@ -54,26 +57,40 @@
 	}
 
 	const inputP = document.getElementById("inputP");
-	const inputC2 = document.getElementById("inputC2");
-	const inputD = document.getElementById("inputD");
+	const inputQ = document.getElementById("inputQ");
+	const inputX = document.getElementById("inputX");
 	const inputG = document.getElementById("inputG");
 	const inputR = document.getElementById("inputR");
 	const inputS = document.getElementById("inputS");
-	const keysize = document.getElementById("keysize");
+	const inputY = document.getElementById("inputY");
 
 	let flagFile = {
 		flag:false,
 		path: ''
 	}
 
+	// q - 160 бит p - 1024
+	let N = 160;
+	let L = 1024;
+
 	function generate() {
-		// q - 160 бит p - 1024
-		let keys = ElGamalGenerate(inputP.value, inputQ.value)
+
+		let keys = generateFIPS(N, L);
+
+		console.log(keys)
+
+		let g = generatorForFIPS(keys.q, keys.p)
+		console.log(g)
+		let size = bigInt.randBetween(1, N/8); // Size of q
+		let x = BigInt('0x' + crypto.randomBytes(Number(size)).toString('hex'));
+
+		let y = fastDegreeModule(g, x, keys.p);
+
 		inputP.value = keys.p;
-		inputG.value = keys.g;
-		inputC2.value = keys.c2; // Закрытый
-		inputD.value = keys.d2; // Открытый
-		console.table(keys);
+		inputQ.value = keys.q;
+		inputX.value = x;
+		inputY.value = y;
+		inputG.value = g;
 	}
 
 	let message = document.getElementById('message');
@@ -98,34 +115,43 @@
 	/*Create a signature*/
 	async function encode() {
 		let p = BigInt(inputP.value);
-		let c = BigInt(inputC2.value);
+		let q = BigInt(inputQ.value);
+
 		let g = BigInt(inputG.value);
-		let u;
-		let s;
+		let x = BigInt(inputX.value);
+
 		let hash;
 		let k = 0n;
-		let size = (keysize.value / 8) - 1 || (p.toString().length / 8) - 1;
-		while (NOD(k, p - 1n) !== 1n) {
-			k = BigInt('0x' + crypto.randomBytes(~~(size)).toString('hex'));
+		let size = bigInt.randBetween(1, N/8);
+		k = BigInt('0x' + crypto.randomBytes(Number(size)).toString('hex'));
+
+		let kInv = getInverseElem(k, q);
+
+		let r = fastDegreeModule(g, k, p) % q;
+		if(r === 0n){
+			console.log('try again');
+			return
 		}
-		let r = fastDegreeModule(g, k, p);
 
 		const findHash = new Promise((resolve) => {
 			if (flagFile.flag) {
 				fs.readFile(message.value, function (err, data) {
 					if (err) throw err;
-					resolve(BigInt('0x' + crypto.createHash('md5').update(data).digest('hex')));
+					resolve(BigInt('0x' + crypto.createHash('SHA1').update(data).digest('hex')));
 				});
 			} else {
-				resolve(BigInt('0x' + crypto.createHash('md5').update(message.value).digest('hex')));
+				resolve(BigInt('0x' + crypto.createHash('SHA1').update(message.value).digest('hex')));
 			}
 		});
 
 		hash = await findHash;
 
-		u = (fastDegreeModule((hash - (c * r)), 1, p - 1n) + (p - 1n)) % (p - 1n);
-		s = (getInverseElem(k, p - 1n) * u) % (p - 1n);
-		console.table({hash, u, s, r, k, p});
+		s = (kInv*(hash + x*r)) % q;
+		if(s === 0n){
+			console.log('try again');
+			return
+		}
+		console.table({hash, g, s, r, k, p});
 		inputR.value = r;
 		inputS.value = s;
 	}
@@ -134,25 +160,36 @@
 		let checkedDigest;
 		let p = BigInt(inputP.value);
 		let g = BigInt(inputG.value);
+		let q = BigInt(inputQ.value);
 		let r = BigInt(inputR.value);
-		let d = BigInt(inputD.value);
+		let y = BigInt(inputY.value);
 		let s = BigInt(inputS.value);
 
-		const findHash = new Promise((resolve) =>{
+		const findHash = new Promise((resolve) => {
 			if (flagFile.flag) {
 				fs.readFile(message.value, function (err, data) {
 					if (err) throw err;
-					resolve(BigInt('0x' + crypto.createHash('md5').update(data).digest('hex')));
+					resolve(BigInt('0x' + crypto.createHash('SHA1').update(data).digest('hex')));
 				});
 			} else {
-				resolve(BigInt('0x' + crypto.createHash('md5').update(message.value).digest('hex')));
+				resolve(BigInt('0x' + crypto.createHash('SHA1').update(message.value).digest('hex')));
 			}
 		});
 
-		let hash = await findHash;
-		checkedDigest = (fastDegreeModule(d, r, p) * fastDegreeModule(r,s, p)) % p;
+		if((r >= q) || (s >= q)){
+			message.value = 'signature is not correct';
+			return
+		}
 
-		if (fastDegreeModule(g, hash, p) === checkedDigest) {
+		let hash = await findHash;
+		let w = getInverseElem(s,q);
+		console.log({w:typeof w, s: typeof s, hash: typeof hash, q: typeof q})
+		let u1 = (hash*w) % q;
+		let u2 = (r*w) % q;
+
+		let v = ((fastDegreeModule(g,u1,p) * fastDegreeModule(y,u2,p)) % p) % q;
+		console.log({v,r})
+		if (v === r) {
 			message.classList.add('flash_green');
 			setTimeout(function () {
 				message.classList.remove('flash_green');
