--- a/Pages/SHA.html
+++ b/Pages/SHA.html
@@ -50,7 +50,7 @@
 <div>
 	<h1>SHA Hash Algorithm</h1>
 	<br><br>
-	<label id="">Введите данные для кодирования</label>
+	<label id="">Введите данные для хеширования или перетащите файл</label>
 	<textarea cols="126" rows="5" id="message"></textarea>
 	<br>
 	<button onclick="encode()">Расчитать хеш</button>
