--- a/index.html
+++ b/index.html
@@ -12,37 +12,40 @@
     <script src="./animated-bg/app.js"></script>
 </head>
 <body>
-<div id="particles-js"></div>
-<div class="container">
+<div id="particles-js">
+
+</div>
+
+<div class="container" style="position: relative">
     <br>
     <h4 class="header">Криптографические методы защиты информации</h4>
     <div class="black-text">
         <h6>Выберите нужную программу:</h6>
     </div>
     <br>
-    <button class="btn waves-effect waves-light" onclick="lab1Button()">Базовые алгоритмы теории чисел</button>
+    <div style="text-align: center">
+        <button class="btn waves-effect waves-light" onclick="lab1Button()"style="width: 100%">Базовые алгоритмы теории чисел</button>
+    </div>
     <br><br>
-    <button class="btn waves-effect waves-light" onclick="lab2Button()">RSA шифрование</button>
-    <br><br>
-    <button class="btn waves-effect waves-light" onclick="labDiffiHellmanButton()">Алгоритм Диффи-Хеллмана</button>
-    <br><br>
-    <button class="btn waves-effect waves-light" onclick="labShamirButton()">Шифр Шамира</button>
+    <button class="btn waves-effect waves-light" onclick="RSAButton()">RSA шифрование</button>
+    <button class="btn waves-effect waves-light" onclick="labDiffiHellmanButton()" style="float: right">Алгоритм Диффи-Хеллмана</button>
+
     <br><br>
     <button class="btn waves-effect waves-light" onclick="labElGamalButton()">Шифр Эль-Гамаля</button>
-    <br><br>
-    <button class="btn waves-effect waves-light" onclick="MD5Button()">MD5 Hash</button>
+    <button class="btn waves-effect waves-light" onclick="labShamirButton()" style="float: right" >Шифр Шамира</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="SHAButton()">SHA Hash</button>
+    <button class="btn waves-effect waves-light" onclick="MD5Button()" style="float: right">MD5 Hash</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="RSADigSigButton()">ЭП на алгоритме RSA</button>
-    <br><br>
-    <button class="btn waves-effect waves-light" onclick="ElGamalDigSigButton()">ЭП на алгоритме Эль-Гамаля</button>
+    <button class="btn waves-effect waves-light" onclick="ElGamalDigSigButton()" style="float: right">ЭП на алгоритме Эль-Гамаля</button>
     <br><br>
     <button class="btn waves-effect waves-light" onclick="FIPSDigSigButton()">ЭП стандарт FIPS</button>
+    <button class="btn waves-effect waves-light" onclick="GOSTButton()" style="float: right" >ГОСТ хеш</button>
+    <br><br>
+
 </div>
 
-
-</div>
 <!-- You can also require other files to run in this process -->
 <script src="./renderer.js"></script>
 <script type="text/javascript" src="./materialze/js/materialize.min.js"></script>
@@ -54,7 +57,7 @@
         ipcRenderer.send('lab1Open');
     }
 
-    function lab2Button() {
+    function RSAButton() {
         ipcRenderer.send('lab2Open');
     }
 
@@ -81,6 +84,9 @@
     }
     function FIPSDigSigButton() {
         ipcRenderer.send('FIPSDigSigOpen');
+    }
+    function GOSTButton() {
+        ipcRenderer.send('GOSTOpen');
     }
 </script>
 
