New buttons main page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./animated-bg/style.css">
 <!--    <script src="./animated-bg/particles.js"></script>-->
 <!--    <script src="./animated-bg/app.js"></script>-->
+    <style> .btn {background-color:#26a69a00}</style>
 
 </head>
 <body>
