--- a/Pages/GOST_digital_signature.html
+++ b/Pages/GOST_digital_signature.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Цифровая подпись стандарта FIPS 186 (DSA)</title>
+	<title>Цифровая подпись стандарта ГОСТ Р 34.10-94</title>
 	<style>.flash_red { background-color: red; } .flash_green { background-color: limegreen; }</style>
 </head>
 <body>
-<h1>Цифровая подпись стандарта FIPS 186 (DSA)</h1>
+<h1>Цифровая подпись стандарта ГОСТ Р 34.10-94</h1>
 <div class="">
 	<label id="labelP">P:</label>
 	<textarea cols="103" rows="3" id="inputP"></textarea>
@@ -18,7 +18,7 @@
 </div>
 <br>
 <div>
-	<label id="labelG">G:</label>
+	<label id="labelG">A:</label>
 	<input type="text" class="form-control" id="inputG" size="70">
 	<br>
 	<label id="labelX">X:</label>
@@ -30,7 +30,7 @@
 	<label id="">Введите сообщение или перетащите файл</label>
 
 	<br>
-	<textarea cols="110" rows="5" id="message"></textarea>
+	<textarea cols="110" rows="5" id="messageId"></textarea>
 	<br>
 	<button onclick="encode()">Сгенерировать ЭП</button>
 </div>
@@ -69,8 +69,8 @@
 		path: ''
 	}
 
-	// q - 160 бит p - 1024 для формата FIPS 186
-	let N = 160;
+	// q - 256 бит p - 1024 для ГОСТ 34.10-94
+	let N = 256;
 	let L = 1024;
 
 	function generate() {
@@ -80,25 +80,23 @@
 		console.log(keys)
 		console.log(keys.q.toString(2).length, keys.p.toString(2).length)
 
-		let g = generatorForFIPS(keys.q, keys.p)
-		console.log(g)
-		console.log(fastDegreeModule(g,keys.q,keys.p))
+		let a = generatorForFIPS(keys.q, keys.p) // Is the same as g in FIPS
 		let size = bigInt.randBetween(1, N/8); // Size of q
 		let x = BigInt('0x' + crypto.randomBytes(Number(size)).toString('hex'));
 
-		let y = fastDegreeModule(g, x, keys.p);
+		let y = fastDegreeModule(a, x, keys.p);
 
 		inputP.value = keys.p;
 		inputQ.value = keys.q;
 		inputX.value = x;
 		inputY.value = y;
-		inputG.value = g;
+		inputG.value = a;
 	}
 
-	let message = document.getElementById('message');
+	let messageId = document.getElementById('messageId');
 
 	['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
-		message.addEventListener(eventName, preventDefaults, false)
+		messageId.addEventListener(eventName, preventDefaults, false)
 	});
 
 	function preventDefaults (e) {
@@ -106,10 +104,10 @@
 		e.stopPropagation()
 	}
 
-	message.ondrop = (e) =>{
+	messageId.ondrop = (e) =>{
 		e.preventDefault();
 		flagFile.path = e.dataTransfer.files[0].path;
-		message.value = flagFile.path;
+		messageId.value = flagFile.path;
 		flagFile.flag = true;
 		return false;
 	};
@@ -126,8 +124,6 @@
 		let size = bigInt.randBetween(1, N/8);
 		let k = BigInt('0x' + crypto.randomBytes(Number(size)).toString('hex'));
 
-		let kInv = getInverseElem(k, q);
-
 		let r = fastDegreeModule(g, k, p) % q;
 		if(r === 0n){
 			console.log('try again');
@@ -136,18 +132,20 @@
 
 		const findHash = new Promise((resolve) => {
 			if (flagFile.flag) {
-				fs.readFile(message.value, function (err, data) {
+				fs.readFile(messageId.value, function (err, data) {
 					if (err) throw err;
-					resolve(BigInt('0x' + crypto.createHash('SHA1').update(data).digest('hex')));
+					resolve(BigInt('0x' + gosthashFile(data)));
 				});
 			} else {
-				resolve(BigInt('0x' + crypto.createHash('SHA1').update(message.value).digest('hex')));
+				console.log(messageId.value)
+				resolve(BigInt('0x' + gosthash(messageId.value)));
 			}
 		});
 
 		hash = await findHash;
+		console.log(hash < q)
 
-		s = (kInv*(hash + x*r)) % q;
+		s = (k*hash + x*r) % q;
 		if(s === 0n){
 			console.log('try again');
 			return
@@ -168,42 +166,43 @@
 
 		const findHash = new Promise((resolve) => {
 			if (flagFile.flag) {
-				fs.readFile(message.value, function (err, data) {
+				fs.readFile(messageId.value, function (err, data) {
 					if (err) throw err;
-					resolve(BigInt('0x' + crypto.createHash('SHA1').update(data).digest('hex')));
+					resolve(BigInt('0x' + gosthashFile(data)));
 				});
 			} else {
-				resolve(BigInt('0x' + crypto.createHash('SHA1').update(message.value).digest('hex')));
+				resolve(BigInt('0x' + gosthash(messageId.value)));
 			}
 		});
 
 		if((r >= q) || (s >= q)){
-			message.value = 'signature is not correct';
+			messageId.value = 'signature is not correct';
 			return
 		}
 
 		let hash = await findHash;
-		let w = getInverseElem(s,q);
-		console.log({w:typeof w, s: typeof s, hash: typeof hash, q: typeof q})
-		let u1 = (hash*w) % q;
-		let u2 = (r*w) % q;
+		let hashInv = getInverseElem(hash, q);
+		let u1 = (hashInv*s) % q;
+		let u2 = ((hashInv * (-r)) % q) + q; // Fix the negative value
+		console.log({u1,u2});
 
 		let v = ((fastDegreeModule(g,u1,p) * fastDegreeModule(y,u2,p)) % p) % q;
-		console.log({v,r})
+		console.log({v,r,u1,u2,hashInv})
 		if (v === r) {
-			message.classList.add('flash_green');
+			messageId.classList.add('flash_green');
 			setTimeout(function () {
-				message.classList.remove('flash_green');
+				messageId.classList.remove('flash_green');
 			}, 2000);
 		} else {
-			message.classList.add('flash_red');
+			messageId.classList.add('flash_red');
 			setTimeout(function () {
-				message.classList.remove('flash_red');
+				messageId.classList.remove('flash_red');
 			}, 2000);
 		}
 		flagFile.flag = false;
 	}
 </script>
 <script src="../src/functions.js"></script>
+<script src="../src/GOST.js"></script>
 </body>
 </html>
